fixed table of contents overflow and personalized scrollbar

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -39,3 +39,25 @@ div[data-rehype-pretty-code-fragment] .line {
 div[data-rehype-pretty-code-fragment] .highlighted {
   @apply border-blue-400 bg-blue-400/20;
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1de;
+  border-radius: 5px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
